# ml-learning

./: .gitignore  README.md  test.ipynb
CompNeuro/Bogacz_Tutorial/: Bogacz Tutorial.ipynb  ex1.ipynb  ex2.ipynb  ex3.ipynb  ex4.ipynb  ex5.ipynb  fig2.ipynb  fig3(2).ipynb  fig3(2)oop.ipynb  fig3.ipynb  fig5.ipynb
CompNeuro/Predictive-Coding/: Friston2005 copy.ipynb  Friston2005.ipynb  PCCNNv4.py  PCFCLayer.py  PCLeNet_L1MoreFeatures.py  mnist_basicPP.ipynb  run.ipynb  train_loops copy.py
CompNeuro/rusty-implementations/: Cargo.toml  README.md
CompNeuro/thousand-brains/: indv_column.ipynb
Deep_Learning/AEs/: mnist_ae.ipynb  mnist_conv_vae.ipynb  mnist_dae.ipynb  mnist_doae_ipc.ipynb  mnist_fc_ae.ipynb  mnist_lfc_ae.ipynb  mnist_vae.ipynb
Deep_Learning/Experimental/: reduce_correlations.ipynb
Deep_Learning/VAEs/: mnist_conv_Attvae.ipynb  mnist_conv_discrete_vae.ipynb  mnist_conv_vae.ipynb  mnist_conv_vae_lookup.ipynb  mnist_conv_vae_mine.ipynb  mnist_conv_vae_spicy_lookup.ipynb  mnist_conv_vqvae copy.ipynb  mnist_conv_vqvae_sampled.ipynb  mnist_ivae.ipynb  mnist_vae.ipynb
Deep_Learning/YOLOv1/: model.py  playground.ipynb  train.ipynb  utils.py
GA/NEAT-lite/: Cargo.toml  README.md
Genetic_Algorithms/String-Gen/: Cargo.toml  README.md
Kaggle/Titanic/: Data Exploration.ipynb  Model1.ipynb  (+3 more)
RL/C1/Simulator/: Cargo.toml
RL/C1/Simulator/src/: lib.rs
RL/C1/Simulator/src/game_logic/: mod.rs  player.rs
RL/C1/Simulator/src/pathfinding/: mod.rs
RL/C1/Simulator/src/units/: classes.rs  mob.rs  mod.rs  structure.rs
Utils/: dataset.py  train_loops.py
(+573 files in other folders)
